--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "core-js": "^3.6.5",
     "element-plus": "^1.0.2-beta.36",
     "normalize.css": "^8.0.1",
+    "vditor": "^3.8.4",
     "vue": "^3.0.9",
     "vue-router": "^4.0.5",
     "vuex": "^4.0.0-0",
