--- a/.env.dev
+++ b/.env.dev
@@ -1,3 +1,4 @@
 NODE_ENV = 'dev'
 VUE_APP_CURRENTMODE= 'dev'
-VUE_APP_BASE_URL = 'http://localhost:8080'
+VUE_APP_BASE_URL = 'http://localhost:9090'
+VUE_APP_BASE_API_URL = 'http://localhost:8080'
