--- a/.env.prod
+++ b/.env.prod
@@ -1,4 +1,4 @@
 NODE_ENV = 'prod'
 VUE_APP_CURRENTMODE= 'prod'
-VUE_APP_BASE_URL = 'http://lightblog-vue_1:8087'
-VUE_APP_BASE_API_URL = 'http://lightblog_1:8086'
+VUE_APP_BASE_URL = 'https://blog.sakuramiku.cn/api'
+VUE_APP_BASE_API_URL = 'https://blog.sakuramiku.cn/api'
